# pypkgs_tutorial

./: CONTRIBUTING.rst  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.ipynb
docs/source/: modules.rst  pypkgs_tutorial.rst
pypkgs_tutorial/: pypkgs_tutorial.py
tests/: test_pypkgs_tutorial.py
